--- a/Mecanillama.API/appsettings.json
+++ b/Mecanillama.API/appsettings.json
@@ -3,7 +3,7 @@
     "Secret": "Place here your secret for token generation"
   },
   "ConnectionStrings": {
-    "AzureDbConnection": "server=mecanillama.mysql.database.azure.com;port=3306;database=mecanillama;user=azuredb@mecanillama;password=UPC2022$"
+    "AzureDbConnection": "server=localhost;port=50262;user=azure;password=6#vWHD_$;database=localdb"
   },
   "Logging": {
     "LogLevel": {
