--- a/Mecanillama.API/appsettings.json
+++ b/Mecanillama.API/appsettings.json
@@ -3,7 +3,7 @@
     "Secret": "Place here your secret for token generation"
   },
   "ConnectionStrings": {
-    "AzureDbConnection": "server=localhost;port=50262;user=azure;password=6#vWHD_$;database=localdb"
+    "AzureDbConnection": "server=localhost;port=3306;user=root;password=12345678;database=localdb"
   },
   "Logging": {
     "LogLevel": {
